# calculo-onus

./: .gitignore  app.py  calculations.py  data_processor.py  df_Mun_UF_Area.csv  eda.ipynb  interface_2.15.py  pop_2014_2022.csv  pyproject.toml  requirements.txt  ui_components.py
.SHP_UFs/: AC.sbn  AC.sbx  AL.sbn  AL.sbx  AL.shx  AM.sbn  AP.sbx  BA.sbn  BA.sbx  CE.dbf  CE.shp  DF.sbn  DF.sbx  DF.shp  DF.shx  GO.dbf  GO.sbn  GO.sbx  MA.dbf  MA.sbn  MS.dbf  MS.sbn  MS.shx  MT.sbn  MT.sbx  PB.dbf  PB.sbn  PE.sbx  PE.shp  PE.shx  PI.sbx  PI.shp  PR.dbf  RJ.shp  RJ.shx  RN.shx  RO.dbf  RO.sbn  RO.sbx  RO.shx  (+11 more)
SHP_UFs/: AC.dbf  AC.shp  AC.shx  AL.dbf  AL.shp  AM.dbf  AM.sbx  AM.shx  AP.dbf  AP.sbn  AP.shp  AP.shx  BA.dbf  BA.shx  CE.sbn  CE.sbx  CE.shx  DF.dbf  ES.dbf  ES.sbn  ES.sbx  ES.shp  ES.shx  GO.shx  MA.sbx  MA.shp  MA.shx  MG.dbf  MG.sbn  MG.sbx  MG.shx  MS.sbx  MT.dbf  MT.shx  PA.dbf  PA.sbn  PA.sbx  PA.shx  PB.sbx  PB.shp  (+34 more)
data/: df_Mun_UF_Area.csv  pop_2014_2024.csv
