[project]
name = "calcula-onus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "datetime>=5.5",
    "folium>=0.19.5",
    "geopandas>=1.0.1",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydeck>=0.9.1",
    "streamlit>=1.35",
    "streamlit-folium>=0.24.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
